# Sequence-type-data-structures

./: CMakeLists.txt  README.md  menu.cpp
collections/dynamicArrayDirectory/: dynamicArray.h  dynamicArrayUnitTests.h
collections/linkedListDirectory/: linkedList.h  linkedListUnitTests.h
sequence/: sequenceAbstract.h
sequence/implementations/arraySequenceImpl/: arraySequence.h  arraySequenceUnitTests.h
sequence/implementations/listSequence/: listSequence.h  listSequenceUnitTests.h
